@@ -42,9 +42,9 @@ static zbx_mem_info_t	*trend_mem = NULL;
 #define	LOCK_CACHE_IDS		zbx_mutex_lock(&cache_ids_lock)
 #define	UNLOCK_CACHE_IDS	zbx_mutex_unlock(&cache_ids_lock)
 
-static ZBX_MUTEX	cache_lock;
-static ZBX_MUTEX	trends_lock;
-static ZBX_MUTEX	cache_ids_lock;
+static ZBX_MUTEX	cache_lock = ZBX_MUTEX_NULL;
+static ZBX_MUTEX	trends_lock = ZBX_MUTEX_NULL;
+static ZBX_MUTEX	cache_ids_lock = ZBX_MUTEX_NULL;
 
 static char		*sql = NULL;
 static size_t		sql_alloc = 64 * ZBX_KIBIBYTE;
