@@ -29,7 +29,7 @@ static HANDLE		system_log_handle = INVALID_HANDLE_VALUE;
 
 static char		log_filename[MAX_STRING_LEN];
 static int		log_type = LOG_TYPE_UNDEFINED;
-static ZBX_MUTEX	log_file_access;
+static ZBX_MUTEX	log_file_access = ZBX_MUTEX_NULL;
 #ifdef DEBUG
 static int		log_level = LOG_LEVEL_DEBUG;
 #else
