@@ -41,7 +41,7 @@ ZBX_COLLECTOR_DATA	*collector = NULL;
 static int		shm_id;
 int 			my_diskstat_shmid = NONEXISTENT_SHMID;
 ZBX_DISKDEVICES_DATA	*diskdevices = NULL;
-ZBX_MUTEX		diskstats_lock;
+ZBX_MUTEX		diskstats_lock = ZBX_MUTEX_NULL;
 #endif
 
 /******************************************************************************
